--- a/app/src/main/res/layout/activity_github_profile.xml
+++ b/app/src/main/res/layout/activity_github_profile.xml
@@ -4,39 +4,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".activities.GithubProfileActivity">
 
-    <androidx.appcompat.widget.Toolbar
+    <include
         android:id="@+id/toolbar"
-        android:layout_width="match_parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:background="@color/colorPrimary"
-        android:layout_height="60dp">
-
-        <ImageView
-            android:layout_width="35dp"
-            android:layout_height="match_parent"
-            android:layout_marginEnd="20dp"
-            android:src="@drawable/github"
-            android:contentDescription="@string/cnt_app_icon" />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center_vertical"
-            android:textColor="@android:color/white"
-            android:textSize="30sp"
-            android:text="@string/github"/>
-    </androidx.appcompat.widget.Toolbar>
-
+        layout="@layout/toolbar"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/tvLogin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/in_between"
-        android:textSize="30sp"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar" />
+        android:textSize="@dimen/title"
+        app:layout_constraintTop_toBottomOf="@id/toolbar" />
 
     <ImageView
         android:id="@+id/ivAvatar"
