--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="in_between">5dp</dimen>
+    <dimen name="title">30sp</dimen>
+    <dimen name="paragraph">18sp</dimen>
 </resources>
